Fix horizontal overflow/scroll problem

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 
 .wrapper {
 	width: 100%;
+    overflow: hidden;
 }
 
 .schleier {
